<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:background="@drawable/ic_background"
    tools:context=".registration.MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="295dp"
            android:layout_height="100dp"
            android:background="@drawable/ic_rectangle_21" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/skif_me"
            android:textAppearance="@style/skif.me" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Some_id"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/yourNumberEditText"
        app:layout_constraintEnd_toEndOf="@+id/yourNumberEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yourNumberSeven"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/yourNumberSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="28dp"
        android:text="@string/seven_phone_num"
        android:textAppearance="@style/your_phone_number"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/yourNumberEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/yourNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:hint="@string/your_phone_number"

        android:textAppearance="@style/your_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="293dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/ic_rectangle_2"
        app:layout_constraintEnd_toEndOf="@+id/yourNumberEditText"
        app:layout_constraintStart_toStartOf="@+id/yourNumberSeven"
        app:layout_constraintTop_toBottomOf="@+id/yourNumberEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>