<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".mainmenu.ActivityMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bottom_sheet_new_obs"
                android:textAppearance="@style/bottom_sheet_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:text="@string/bottom_sheet_cancel"
                android:textAppearance="@style/bottom_sheet_cancel_label" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="11dp"
        android:text="@string/bottom_sheet_phone_number"
        android:textAppearance="@style/activity_two_phone_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/maskedEt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:inputType="phone"
            android:textAppearance="@style/bottom_sheet_number"
            app:allowed_chars="1234567890"
            app:mask="+7(###)###-##-##" />

        <ImageView
            android:id="@+id/contacts"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0"
            android:background="@drawable/ic_vector_39" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="vertical">

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save_btn"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"/>
    </LinearLayout>
</LinearLayout>